--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/parkapi?useSSL=false&allowPublicKeyRetrieval=true&serverTimeZone=America/Sao_Paulo
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Configurações do Hibernate (opcional)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql:true
+
+# LOCALE
+spring.mvc.locale-resolve=fixe
+spring.mvc.locale=pt_BR
