--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/parkapi?useSSL=false&allowPublicKeyRetrieval=true&serverTimeZone=America/Sao_Paulo
+spring.datasource.url=jdbc:mysql://localhost:3306/parkapi
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configurações do Hibernate (opcional)
+# Configurações do Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql:true
+spring.jpa.show-sql=true
 
 # LOCALE
-spring.mvc.locale-resolve=fixe
+spring.mvc.locale-resolver=fixed
 spring.mvc.locale=pt_BR
+
+
