adicionando o swagger no projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,11 @@ spring.jpa.show-sql=true
 spring.mvc.locale-resolver=fixed
 spring.mvc.locale=pt_BR
 
+# swagger-ui custom path
+springdoc.swagger-ui.path=/docs-park.html
+springdoc.api-docs.path=/docs-park
+springdoc.packages-to-scan=com.sistemacar.parkapi.controller
+springdoc.show-actuator=true
+
+
 
